--- a/index.css
+++ b/index.css
@@ -1,223 +1,247 @@
 @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
 
+html,
 body {
-  margin: 0 auto;
-  letter-spacing: 0.03rem;
-  font-family: "Gowun Dodum", sans-serif;
-}
-
-#scrollTop {
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  z-index: 100;
-  background-color: #28e2a1;
-  width: 60px;
-  height: 60px;
-  font-weight: bold;
-
-  border-radius: 50%;
-  border: none;
-  color: #fff;
-}
-
-/**********/
-/* header */
-/**********/
-
-/* 네브바 */
-#header {
-  width: 100%;
-  height: 100px;
-  line-height: 65px;
-
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 99;
-  background-color: #4efcc0;
-}
-
-#navbar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: row;
-  margin: 0 8.5%;
-}
-
-#navbar ul {
-  display: flex;
+  margin: 0;
   padding: 0;
+  color: white;
+  letter-spacing: 0.15rem;
+  font-family: "Gowun Dodum", sans-serif;
+  font-size: 1.05rem;
+  text-shadow: 1px 0px grey;
 }
 
-#navbar li {
-  margin: 0 25px;
-  list-style: none;
+body::-webkit-scrollbar {
+  width: 15px;
 }
 
-#navbar li a {
-  text-decoration: none;
-  font-size: 1.3rem;
-  font-weight: bold;
-  cursor: pointer;
-  padding: 5px 10px;
-  color: black;
+body::-webkit-scrollbar-thumb {
+  background: grey; /* 스크롤바의 색상 */
+
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 3px solid transparent;
 }
 
-#navbar li a:hover {
-  letter-spacing: 4px;
-
-  border-bottom: 2px solid grey;
-
-  transition: Letter-spacing 0.2s linear;
+#background {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  max-height: 100%;
+  background-attachment: fixed;
+  background-image: url("./image/backgroundImage3.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 /********/
-/* main */
+/* 메인 */
 /********/
-
 #main {
-  margin: 150px 0 0 0;
-  clear: auto;
-}
-
-/* 사진 영역 */
-#picture {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
 
-  position: relative;
-  overflow: hidden;
-  box-sizing: border-box;
+.scroll {
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
+  animation: show 1s ease 1 normal;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate(0, 100px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+/***************/
+/* 프로필 영역 */
+#profile_area {
+  width: 65%;
   height: 100%;
-  min-height: 830px;
-  background-image: url(./image/backImg.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
+  /* border: 10px double white; */
+  margin: 20px;
 
-.nameH1 {
-  font-size: 2.7rem;
-  font-weight: 1000;
-}
-
-.page {
-  width: 50%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-
-  margin: 30px;
+  flex-wrap: wrap;
 }
 
-.frame {
-  border: 5px double rgb(255, 78, 113);
-  width: 17.5rem;
-  height: 17.5rem;
+/* 사진 영역 */
+#selfie_area h1 {
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+#selfie_area {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+
+/* 얼굴 */
+.img_container {
+  border: 5px double white;
+  width: 11em;
+  height: 11rem;
   border-radius: 100%;
+  margin: 0;
+  box-shadow: 0px 0px 10px 5px;
 
   overflow: hidden;
 }
 
-.chanImg {
-  width: 17.5rem;
-  height: 17.5rem;
-  border-radius: 100%;
+.img_container img {
+  margin-top: 5px;
+  width: 11rem;
+  height: 10.5rem;
 }
 
-.chanImg:hover {
+.img_container img:hover {
   transform: scale(1.1, 1.1);
-  transition: transform 1s;
+  transition: transform 0.7s;
 }
 
-/* 아이콘 */
-.page img {
+/* 바로가기 이미지 */
+.go_img {
+  width: 30%;
+  padding-top: 20px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.go_img a > img {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 100px;
-
-  margin: 0 40px;
+  border: 21x solid black;
 }
 
-.page img:hover {
+.go_img a > img:hover {
   transform: scale(1.2, 1.2);
 
   transition: transform 0.3s;
 }
 
-/* 자기 소개 */
+/* 자기소개 */
 #introduce {
-  text-align: center;
-  width: 40%;
+  width: 60%;
+  margin: 30px;
 }
 
 #introduce h1 {
-  font-size: 1.5rem;
+  border-bottom: 2px solid white;
+  padding-bottom: 10px;
 }
 
-#introduce p {
-  line-height: 150%;
-  border-top: 1px solid grey;
-  padding-top: 20px;
-}
-
-/* 인포메이션 */
-#information {
+/* 기본정보 및 스택 영역 */
+#intro_area {
   display: flex;
-  justify-content: center;
-  align-items: center;
-
+  justify-content: space-around;
   flex-wrap: wrap;
-  margin-top: 100px;
 
-  position: relative;
-  overflow: hidden;
-  box-sizing: border-box;
-  height: 100%;
-  min-height: 830px;
-  background-image: url(./image/back2.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
+  width: 100%;
+  padding: 20px;
 }
 
-#information section {
-  width: 30%;
-  height: 400px;
-  margin: 30px;
-  padding-left: 30px;
-
-  border: solid 3px #4efcc0;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  box-shadow: 10px 10px 20px grey;
-  background-color: rgb(248, 254, 254);
-  opacity: 98%;
+/* 기본정보 */
+.infoShow_area {
+  width: 40%;
+  margin: 20px 0;
+  padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
 }
 
-#project a {
+.infoShow_area h1 {
+  border-bottom: 2px solid white;
+  padding-bottom: 10px;
+}
+
+/*****************/
+/* 프로젝트 영역 */
+#project_area {
+  width: 52%;
+  height: 1000px;
+  /* border: 10px double white; */
+  margin: 20px;
+}
+
+#project_area h1 {
+  border-bottom: 2px solid white;
+  padding-bottom: 10px;
+}
+
+/* 각 아이템 공통 */
+.project_items {
+  margin: 50px 10px;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.project_explain {
+  width: 60%;
+}
+
+.project_explain a {
   text-decoration: none;
   font-weight: bold;
   color: #91bbf5;
 }
 
-#project p:nth-child(1) {
-  margin-top: 20px;
+.project_explain img {
+  border-radius: 5px;
+  margin-right: 2px;
 }
 
-#information h3 {
-  font-size: 1.5rem;
-  width: 90%;
-  line-height: 50px;
-  border-bottom: solid 1px grey;
+.project_picture {
+  width: 40%;
 }
 
+.project_picture img {
+  width: 330px;
+  margin-top: 60px;
+
+  border-radius: 10px;
+  /* box-shadow: 0px 0px 10px 5px; */
+  box-shadow: 7px 7px 10px grey;
+}
+
+.project_stack {
+  margin: 20px 0;
+}
+
+.project_items h3 {
+  width: 80%;
+  border-bottom: 2px dashed white;
+  padding-bottom: 20px;
+}
+
+/***************/
+/* footer 영역 */
+/***************/
 #footer {
-  margin: 40px auto;
+  margin: auto;
   border-top: solid 1px grey;
   width: 80%;
 
@@ -232,33 +256,90 @@ body {
 }
 
 .copyright {
-  margin: 10px 0 10px 0;
+  margin: 20px 0 10px 0;
 }
 
-@media (min-width: 320px) and (max-width: 1200px) {
-  #introduce {
-    text-align: center;
-    width: 70%;
+@media (min-width: 320px) and (max-width: 1024px) {
+  #profile_area {
+    width: 80%;
+    height: 100%;
+    /* border: 10px double white; */
+    margin: 20px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
-  #information {
+  .go_img {
+    width: 25%;
+    padding-top: 20px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  #introduce {
+    width: 75.5%;
+    margin: 30px;
+  }
+
+  #intro_area {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
-    flex-wrap: wrap;
-    margin-top: 50px;
+    width: 100%;
+    padding: 20px;
   }
 
-  #information section {
+  .infoShow_area {
     width: 80%;
-    height: 400px;
-    margin: 30px;
-    padding-left: 30px;
+    margin: 20px 0;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+  }
 
-    border: solid 3px #4efcc0;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    box-shadow: 10px 10px 20px grey;
+  .infoShow_area h1 {
+    border-bottom: 2px solid white;
+    padding-bottom: 10px;
+  }
+
+  #project_area {
+    width: 60.5%;
+    height: 100%;
+    /* border: 10px double white; */
+    margin: 20px;
+  }
+
+  .project_items {
+    margin: 50px 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .project_explain {
+    width: 100%;
+  }
+
+  .project_picture {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .project_picture img {
+    width: 330px;
+    margin-top: 60px;
+
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 10px 5px; */
+    box-shadow: 7px 7px 10px grey;
   }
 }
